# fusekit

./: .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_GOAL.md  README.md  ROADMAP.md  SECURITY.md  app.py  install.sh  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  provider_pack.md
.github/workflows/: ci.yml  security.yml
deploy/oci/: README.md
deploy/oci/release/: fusekit-hosted-release.sh
deploy/oci/systemd/: fusekit-hosted.service  fusekit-worker-dispatch.service
deploy/oci/tmpfiles/: fusekit.conf
docs/: acceptance-demo-runbook.md  acceptance-runbook.md  implementation-plan.md  magic-path-friction-log.md  northstar-provider-strategy.md  oci-runner-lane.md  open-core-boundary.md  public-launch-readiness.md  security-surface-map.md  threat-model.md
examples/moonlite-rsvp/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json
examples/moonlite-rsvp/api/: rsvp.ts
examples/moonlite-rsvp/src/: main.tsx  styles.css
scripts/: check.sh  security_check.sh
src/fusekit/: __init__.py  __main__.py  approvals.py  audit.py  cli.py  errors.py  manifest.py  planner.py  policy.py  rollback.py  scanner.py  source.py  verification_report.py
src/fusekit/capabilities/: __init__.py  runtime.py
src/fusekit/commands/: __init__.py  apply.py  authorize.py  detonate.py  launch.py  plan.py  scan.py  verify.py
src/fusekit/crypto/: __init__.py  oci_keys.py  secrets.py  sshkeys.py
src/fusekit/detonation/: __init__.py  cleanup.py  preflight.py
src/fusekit/harness/: __init__.py  acceptance.py  ledger.py
src/fusekit/hosted/: __init__.py  aws_plan.py  billing.py  evidence.py  github_app.py  host_posture.py  job.py  lanes.py  launcher.py  oci_access.py  oci_inventory.py  oci_replacement.py  runtime_secrets.py  script_json.py  server.py  session.py  stripe_setup.py  stripe_verify.py  verify.py  worker.py  worker_client.py  worker_dispatch.py
src/fusekit/llm/: __init__.py  config.py  contract.py  openclaw_auth.py
src/fusekit/providers/: __init__.py  automation.py  capability_pack.py  cloudflare.py  github.py  handoff.py  http.py  intelligence.py  resend.py  secret_routing.py  strategy.py  vercel.py  (+1 more)
tests/: test_audit.py  test_capabilities.py  test_cli.py  test_detonation_cleanup.py  test_detonation_preflight.py  test_gate_guidance.py  test_gates.py  test_harness.py  test_hosted_aws_plan.py  test_hosted_billing.py  test_hosted_github_app.py  test_hosted_host_posture.py  test_hosted_job.py  test_hosted_launcher.py  test_hosted_oci_access.py  test_hosted_oci_inventory.py  test_hosted_oci_replacement.py  test_hosted_runtime_secrets.py  test_hosted_script_json.py  test_hosted_server.py  test_hosted_session.py  test_hosted_stripe_setup.py  test_hosted_stripe_verify.py  test_hosted_verify.py  test_hosted_worker.py  test_hosted_worker_client.py  test_hosted_worker_dispatch.py  test_import.py  test_llm.py  test_moonlite_rsvp_app.py  test_oci_deploy_templates.py  test_provider_automation.py  test_provider_http.py  test_provider_intelligence.py  test_provider_packs.py  test_provider_strategy.py  test_provider_vercel.py  test_provider_verification.py  test_public_docs.py  test_resend_provider.py  (+8 more)
(+64 files in other folders)
