[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusekit"
version = "0.1.0"
description = "Detonated setup worker and encrypted capability vault for AI-built apps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "FuseKit Contributors" }
]
dependencies = [
  "cryptography>=48.0.1,<49",
  "dnspython>=2.6",
  "oci>=2.160",
  "playwright>=1.49",
  "PyNaCl>=1.5",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-PyYAML>=6",
]
security = [
  "bandit>=1.7",
  "pip-audit>=2.7",
  "semgrep>=1.80",
]

[project.scripts]
fusekit = "fusekit.cli:main"
fusekit-hosted = "fusekit.hosted.server:main"
fusekit-hosted-aws-plan = "fusekit.hosted.aws_plan:main"
fusekit-hosted-oci-access-plan = "fusekit.hosted.oci_access:main"
fusekit-hosted-oci-inventory = "fusekit.hosted.oci_inventory:main"
fusekit-oci-host-posture = "fusekit.hosted.host_posture:main"
fusekit-hosted-verify = "fusekit.hosted.verify:main"
fusekit-hosted-stripe-price = "fusekit.hosted.stripe_setup:main"
fusekit-hosted-stripe-price-verify = "fusekit.hosted.stripe_verify:main"
fusekit-hosted-worker = "fusekit.hosted.worker_client:main"
fusekit-hosted-worker-dispatch = "fusekit.hosted.worker_dispatch:main"
fusekit-runner-loop = "fusekit.runner.loop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["fusekit"]

[[tool.mypy.overrides]]
module = ["dns", "dns.*", "oci", "oci.*", "playwright", "playwright.*"]
ignore_missing_imports = true
